- Fixed name not showing on artist page for albumartists - Formatting fix on mobile artist page - Temporarily disabled artist thumbnail loading

--- a/css/style.css
+++ b/css/style.css
@@ -1495,7 +1495,8 @@ input:focus {
 	}
 
 	/* artist page */
-	.page-artist-header-overlay li {
+	.page-artist-header-button {
+		margin: 0;
 		width: 33.3%;
 	}
 }
